--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "incomers",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +16,6 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "pagination": "^0.4.6"
-  }
+  },
+  "description": ""
 }
